@@ -17,7 +17,6 @@
  */
 
 package org.apache.zookeeper.test;
-import org.apache.log4j.Logger;
 import org.junit.Before;
 import org.junit.Test;
 
